<resources>
    <string name="app_name">Flashcards</string>
    <string name="set">Please enter the set name</string>
    <string name="term">Please enter the term</string>
    <string name="definition">Enter the definition</string>
    <string name="add">Add Card</string>
    <string name="finish">Create Set</string>
    <string name="cancel">Cancel</string>
    <string name="completeCards">All Done</string>
    <string name="categoryName">Category Name</string>
    <string name="categoryCreate">Create Category</string>
    <string name="categoryAdd">Add New Category</string>
    <string name="cardAdd">Add Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setList">Set List</string>
    <string name="switchToAllCards">All Cards</string>
    <string name="headerTitle">Cue Cards</string>
    <string name="headerText">s t u d y</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="switchToAllSets">All Sets</string>
    <string name="reviewCardsSet">Review Cards</string>
    <string name="description">Please enter a description</string>
    <string name="cardFrontTerm">Placeholder</string>
    <string name="cardBackDefinition">Placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>