<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetDialogFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/SetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/set"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/createSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@color/black" />
            <Space
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <Button
                android:id="@+id/cancelSet"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>